vnet-subnet-nsg.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vnetPrefix": {
      "type": "string",
      "defaultValue": "192.168.0.0/16",
      "metadata": {
        "description": "CIDR prefix for the VNet address space."
      }
    },
    "frontEndSubnetPrefix": {
      "type": "string",
      "defaultValue": "192.168.1.0/24",
      "metadata": {
        "description": "CIDR address prefix for the front end subnet."
      }
    },
    "backEndSubnetPrefix": {
      "type": "string",
      "defaultValue": "192.168.2.0/24",
      "metadata": {
        "description": "CIDR address prefix for the back end subnet."
      }
    },
    "projectCode": {
      "type": "string",
      "defaultValue": "app",
      "metadata": {
        "description": "Project code."
      }
    },
    "environmentCode": {
      "type": "string",
      "defaultValue": "dev",
      "metadata": {
        "description": "Environment code"
      }
    },
    "projectTag": {
      "type": "string",
      "defaultValue": "application1",
      "metadata": {
        "description": "Name of the Project tag this deployment belong to"
      }
    },
    "environmentTag": {
      "type": "string",
      "defaultValue": "development",
      "metadata": {
        "description": "Name of the environment tag. It can be development, preproduction, production, sandpit or testing"
      }
    },
    "creationDateTime": {
      "type": "string",
      "metadata": {
        "description": "Creation date and time in UTC"
      }
    }
  },
  "variables": {
    "vnetName": "[concat(parameters('environmentCode'), parameters('projectCode'), 'nw', 'vnet')]",
    "frontEndSubnetName": "[concat(parameters('environmentCode'), parameters('projectCode'), 'fe', 'snet')]",
    "backEndSubnetName": "[concat(parameters('environmentCode'), parameters('projectCode'), 'be', 'snet')]",
    "frontEndNSGName": "[concat(parameters('environmentCode'), parameters('projectCode'), 'fe', 'nsg')]",
    "backEndNSGName": "[concat(parameters('environmentCode'), parameters('projectCode'), 'be', 'nsg')]"
  },
  "resources": [
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('backEndNSGName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "name": "NSG RemoteAccess",
        "project": "[parameters('projectTag')]",
        "environment": "[parameters('environmentTag')]",
        "tier": "network",
        "creationdatetime": "[parameters('creationDateTime')]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "allow-frontend",
            "properties": {
              "description": "Allow FE Subnet",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "[parameters('frontEndSubnetPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "block-internet",
            "properties": {
              "description": "Block Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 200,
              "direction": "Outbound"
            }
          }

        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('frontEndNSGName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "name": "NSG FrontEnd",
        "project": "[parameters('projectTag')]",
        "environment": "[parameters('environmentTag')]",
        "tier": "network",
        "creationdatetime": "[parameters('creationDateTime')]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "rdp-rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "web-rule",
            "properties": {
              "description": "Allow WEB",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('vnetName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('frontEndNSGName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('backEndNSGName'))]"
      ],
      "tags": {
        "name": "VNet",
        "project": "[parameters('projectTag')]",
        "environment": "[parameters('environmentTag')]",
        "tier": "network",
        "creationdatetime": "[parameters('creationDateTime')]"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('frontEndSubnetName')]",
            "tags": {
              "name": "Subnet FrontEnd",
              "project": "[parameters('projectTag')]",
              "environment": "[parameters('environmentTag')]",
              "tier": "network",
              "creationdatetime": "[parameters('creationDateTime')]"
            },
            "properties": {
              "addressPrefix": "[parameters('frontEndSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('frontEndNSGName'))]"
              }
            }
          },
          {
            "name": "[variables('backEndSubnetName')]",
            "tags": {
              "name": "Subnet BackEnd",
              "project": "[parameters('projectTag')]",
              "environment": "[parameters('environmentTag')]",
              "tier": "network",
              "creationdatetime": "[parameters('creationDateTime')]"
            },
            "properties": {
              "addressPrefix": "[parameters('backEndSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('backEndNSGName'))]"
              }
            }
          }
        ]
      }
    }
  ]
}
